@@ -1,3 +1,13 @@
+2011-04-10  Ivan Maidanski  <ivmai@mail.ru> (really Iain Sandoe, Mike Stump)
+
+	* dyn_load.c (GC_dyld_sections): Add more sctions.
+	* dyn_load.c (GC_dyld_add_sect_fmts): New static varaible.
+	* dyn_load.c (L2_MAX_OFILE_ALIGNMENT): New macro.
+	* dyn_load.c (GC_dyld_image_add, GC_dyld_image_remove): Improve
+	logging; add support for on-demand sections.
+	* dyn_load.c (GC_dyld_image_add, GC_dyld_image_remove): Reformat
+	the code.
+
 2011-04-10  Ivan Maidanski  <ivmai@mail.ru>
 
 	* gcj_mlc.c (GC_gcj_malloc_initialized): Use STATIC unless
